--- a/wiki/HowTo_tools.wiki
+++ b/wiki/HowTo_tools.wiki
@@ -20,7 +20,7 @@ it computes the total cell spectral efficiency
 Example: we suppose to run a simulation with bandwidth = 10Mhz and duration = 30 seconds.
 {{{
 ./LTE-Sim SingleCellWithI 7 1 1 0 0 1 0 1 1 3 0.1 128 > trace.tr
-bandwidth=10
+bandwidth=10000000
 time=30
 grep "^RX" trace.tr  | awk '{print $8}'  > tmp
 ./src/Simulation/TOOLS/make_cell_spectral_efficiency   tmp   ${time}   ${bandwidth} 
